<resources>
    <string name="app_name">Movie Demo</string>

    <string name="title_bottom_nav_bar_1">Home</string>
    <string name="title_bottom_nav_bar_2">Search</string>
    <string name="title_bottom_nav_bar_3">Favorites</string>

    <string name="tab_title_1">MOVIES</string>
    <string name="tab_title_2">TV SHOWS</string>

    <string name="button_see_all">SEE ALL</string>

    <string name="title_popular_movies">Popular Movies</string>
    <string name="title_top_rated_movies">Top Rated Movies</string>

    <string name="trending_trailer_error">No trailer found</string>

    <string name="title_popular_tvs">Popular TV Shows</string>
    <string name="title_top_rated_tvs">Top Rated TV Shows</string>

    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">TV Shows</string>

    <string name="bullet_point">•</string>
    <string name="thousand_separator">,</string>

    <string name="hour_short">hr</string>
    <string name="minute_short">min</string>

    <string name="detail_summary">Summary</string>
    <string name="detail_director">Director</string>
    <string name="detail_writers">Writers</string>
    <string name="detail_title_trailers">Trailers</string>
    <string name="detail_title_cast">Cast</string>

    <string name="detail_creators">Creators</string>
    <string name="detail_title_seasons">Seasons</string>

    <string name="detail_season_episodes">%d episodes</string>


    <string name="n_a">N/A</string>

    <string name="empty_favorites_list_movie">Your favorite movies list is empty</string>
    <string name="empty_favorites_list_tv">Your favorite TV shows list is empty</string>

    <string name="snackbar_removed_item">Removed from favorites</string>
    <string name="snackbar_action_undo">UNDO</string>

    <string name="error_connection">Unable to fetch data, please check your internet connection and try again.</string>
    <string name="error_service">API service is not responding at the moment, please try again later.</string>
    <string name="error_unknown">Unknown error occurred.</string>
    <string name="button_retry">RETRY</string>

    <string name="item_count">" (%d)"</string>
    <string name="item_count_s">" (%s)"</string>
    <string name="title_see_all_search" formatted="false" >\"%s\" (%d)</string>

    <string name="search_query_hint">Search movie and TV show</string>

    <string name="double_press_exit">Press again to exit</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="gender_non_binary">Transgender</string>
    <string name="biography">Biography</string>
    <string name="gender">Gender</string>
    <string name="department">Department</string>
    <string name="birthday">Birthdate</string>
    <string name="place_of_birth">Place of Birth</string>
</resources>